# a-bag-of-scripts

./: .markdownlint.jsonc  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/prompts/: common-task-framework.prompt.md  photograph-workflow.prompt.md
docs/: 设计.md
docs/prompts/feature/: common.md
modules/photograph/_enums/: format.py  photo.py
modules/photograph/exif/: exif.py
modules/photograph/processor/: _processor.py  sony.py
modules/photograph/task_manager/: task.py
modules/photograph/tasks/: rename_raw_photo.py
modules/task/: task.py  task_manager.py
pkg/_enums/: format.py  photo.py
pkg/_types/: photo.py
pkg/processor/: sony.py
pkg/task_manager/: task.py
pkg/utils/: _exif.py
scripts/: activate.sh  rename-pano.py  system-disk-usage-filter.sh  全景照片重命名.py  视频目录重命名.py  读取相机exif重命名文件.py  重命名原始照片.py
scripts/opencv/: README.md  compile-opencv.sh
test/photograph/: test_rename_raw_photo_task.py
tools/photograph/: add-date-to-archived-files.py  add-modified-date-to-archived-files.py  rename-raw-photo-task.py  rename-raw-photo.py
utils/: xphoto.py
