[project]
name = "common-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "exifread>=3.3.0",
    "loguru>=0.7.3",
    "piexif>=1.1.3",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
